--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nordicbox",
   "displayName": "nordicbox",
   "description": "A mixture of Nord, Nordic and gruvbox",
+  "publisher": "fedmag",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.101.0"
@@ -9,12 +10,16 @@
   "categories": [
     "Themes"
   ],
+  "repository": {
+    "url": "https://github.com/fedmag/nordicbox"
+  },
   "keywords": [
     "dark",
     "pale",
     "nord",
     "nordic",
-    "gruvbox"
+    "gruvbox",
+    "pastel"
   ],
   "contributes": {
     "themes": [
